# collectlabel

./: README.md
native_opencv/: pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/android/src/main/: AndroidManifest.xml
native_opencv/android/src/main/kotlin/com/example/native_opencv/: NativeOpencvPlugin.kt
native_opencv/android/src/test/kotlin/com/example/native_opencv/: NativeOpencvPluginTest.kt
native_opencv/example/: pubspec.yaml
native_opencv/example/android/app/: build.gradle
native_opencv/example/android/app/src/main/kotlin/com/example/native_opencv_example/: MainActivity.kt
native_opencv/example/integration_test/: plugin_integration_test.dart
native_opencv/example/ios/Runner.xcodeproj/: project.pbxproj
native_opencv/example/lib/: main.dart
native_opencv/ios/Classes/: native_opencv.cpp
native_opencv/ios/Classes/Detector/: opencv_detector.cpp  opencv_detector.h
native_opencv/lib/: native_opencv.dart
native_opencv/test/: native_opencv_test.dart
